--- a/index.html
+++ b/index.html
@@ -63,33 +63,33 @@
             <tbody>
                 <tr>
                     <td><p>Task 1</p></td>
-                    <td><a href="https://github.com/Aadarsh0307/MERN_React_Task-1" target="_blank">Repository Link</a></td>
-                    <td><a href="https://mern-react-task-1-aadarsh-rais-projects.vercel.app/" target="_blank">Deployment Link</a></td>
+                    <td><a href="https://github.com/AdityaaSunny/Ethnus-Task-3/tree/cbf27c085ac137527b4e9d5eab634302d208be84/MERN_React_Task-1-main" target="_blank">Repository Link</a></td>
+                    <td><a href="https://ethnus-task-1-ebhg5ojwl-adityas-projects-a4fd0286.vercel.app/" target="_blank">Deployment Link</a></td>
                 </tr>
                 <tr>
                     <td><p>Task 2</p></td>
-                    <td><a href="https://github.com/Aadarsh0307/MERN_React_Task-2" target="_blank">Repository Link</a></td>
-                    <td><a href="https://mern-react-task-2-aadarsh-rais-projects.vercel.app/" target="_blank">Deployment Link</a></td>
+                    <td><a href="https://github.com/AdityaaSunny/Ethnus-Task-3/tree/cbf27c085ac137527b4e9d5eab634302d208be84/MERN_React_Task-2-main" target="_blank">Repository Link</a></td>
+                    <td><a href="https://ethnus-task-2.vercel.app/" target="_blank">Deployment Link</a></td>
                 </tr>
                 <tr>
                     <td><p>Task 3</p></td>
-                    <td><a href="https://github.com/Aadarsh0307/MERN_React_Task-3" target="_blank">Repository Link</a></td>
-                    <td><a href="https://mern-react-task-3-aadarsh-rais-projects.vercel.app/" target="_blank">Deployment Link</a></td>
+                    <td><a href="https://github.com/AdityaaSunny/Ethnus-Task-3/tree/cbf27c085ac137527b4e9d5eab634302d208be84/MERN_React_Task-3-main" target="_blank">Repository Link</a></td>
+                    <td><a href="https://ethnus-task-3.vercel.app/" target="_blank">Deployment Link</a></td>
                 </tr>
                 <tr>
                     <td><p>Task 4</p></td>
-                    <td><a href="https://github.com/Aadarsh0307/MERN_React_Task-4" target="_blank">Repository Link</a></td>
-                    <td><a href="https://mern-react-task-4-aadarsh-rais-projects.vercel.app/" target="_blank">Deployment Link</a></td>
+                    <td><a href="https://github.com/AdityaaSunny/Ethnus-Task-3-Part-2-/tree/aa37d7bd39f7902f18c5f95563ce367179afe2cc/MERN_React_Task-4-main/src" target="_blank">Repository Link</a></td>
+                    <td><a href="https://ethnus-task-4.vercel.app/" target="_blank">Deployment Link</a></td>
                 </tr>
                 <tr>
                     <td><p>Task 5</p></td>
-                    <td><a href="https://github.com/Aadarsh0307/MERN_React_Task-5" target="_blank">Repository Link</a></td>
-                    <td><a href="https://mern-react-task-5-aadarsh-rais-projects.vercel.app/" target="_blank">Deployment Link</a></td>
+                    <td><a href="https://github.com/AdityaaSunny/Ethnus-Task-3-Part-2-/tree/aa37d7bd39f7902f18c5f95563ce367179afe2cc/MERN_React_Task-5-main" target="_blank">Repository Link</a></td>
+                    <td><a href="https://ethnus-task-5.vercel.app/" target="_blank">Deployment Link</a></td>
                 </tr>
                 <tr>
                     <td><p>Task 6</p></td>
-                    <td><a href="https://github.com/Aadarsh0307/MERN_React_Task-6" target="_blank">Repository Link</a></td>
-                    <td><a href="https://mern-react-task-6-git-main-aadarsh-rais-projects.vercel.app/" target="_blank">Deployment Link</a></td>
+                    <td><a href="https://github.com/AdityaaSunny/Portfolio.git" target="_blank">Repository Link</a></td>
+                    <td><a href="https://portfolio-opal-nine-13.vercel.app/" target="_blank">Deployment Link</a></td>
                 </tr>           
             </tbody>
         </table>
